2009-04-07
Added the db_ids results to the file requests in plugins, this is so modules can try to be more efficient then just looking up filepaths
	Changed modules to use int ids, bigint is unnessicary and cost twice as much time, it is unlikely that anyone will load more then 2 billion files into the database
Changed db_ids to look up all the ids at once, it now accepts a $files parameter and appends all the needed id information
Fixed some problems with db_file module and the handle() functions

2009-04-05
Changed db_files search feature to put the directory matching first to narrow down results better
Worked on search page for live template

2009-04-04
Using the general search no longer affects other columns specified in the query
Worked on Live template, search page now looks nice

2009-04-03
Worked on live template, added information box, and Advanced Search button

2009-04-02
Created a LOCAL_BASE variable that is the base template for holding shared pages for other templates to use
Changed LOCAL_DEFAULT to the default template that loads when one is not selected
Modified db_archive module to use PEAR archive library, which works much better then the lib_id3
Worked on live template

2009-04-01
Fixed some speed issues when loading files, apparently checking the connection takes a while, so the watch_list now exists when it done scanning a directory instead of in between files
	Reduced the sleep, if they want efficiency and not as much load, you should use the small version on the system the files actually live on
	Fixed the archive and disk image module to set up the IDs to pass to db_ids, all IDs are 0 except for the respective module database
	Fixed db_watch_list modules handle_file() method to not "force" file modification if it is skipped

2009-03-31
Fixed db_amazon module to not access the database unnessicarily
Nearly finished live template
Fixed some problems in db_files and db_ids

2009-03-30
All modules return the ID of added or modified entry